src/test/resources/invalid/typecheck/VarInit_NotBoolean.vas
class Main is
    var b : Boolean = 42
end